--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -1,5 +1,8 @@
 #common
 /main.do=common.controller.MainAction
 
+#user
+/join.do=user.controller.UserCreateAction
+
 #borad
 /boardList.do=borad.controller.boardListAction
