--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -2,7 +2,8 @@
 /main.do=common.controller.MainAction
 
 #user
-/join.do=user.controller.UserCreateAction
+/join.do=user.controller.JoinAction
+/joinEnd.do=user.controller.UserCreateAction
 
 #borad
-/boardList.do=borad.controller.boardListAction
+#/boardList.do=borad.controller.boardListAction
