--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -4,6 +4,7 @@
 #user
 /join.do=user.controller.JoinAction
 /joinEnd.do=user.controller.UserCreateAction
+/login.do=user.controller.LoginAction
 
 #borad
 #/boardList.do=borad.controller.boardListAction
