--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -7,4 +7,4 @@
 /login.do=user.controller.LoginAction
 
 #borad
-#/boardList.do=borad.controller.boardListAction
+/board.do=board.controller.BoardAction
