--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -5,6 +5,8 @@
 /join.do=user.controller.JoinAction
 /joinEnd.do=user.controller.UserCreateAction
 /login.do=user.controller.LoginAction
+/logout.do=user.controller.LogoutAction
 
 #borad
 /board.do=board.controller.BoardAction
+/subArticle.do=board.controller.SubArticleAction
