--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -10,3 +10,4 @@
 #borad
 /board.do=board.controller.BoardAction
 /subArticle.do=board.controller.SubArticleAction
+/article.do=board.controller.GetArticleAction
