--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -11,3 +11,4 @@
 /board.do=board.controller.BoardAction
 /subArticle.do=board.controller.SubArticleAction
 /article.do=board.controller.GetArticleAction
+/articleWrite.do=board.controller.WriteArticleAction
