--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -9,6 +9,7 @@
 
 #borad
 /board.do=board.controller.BoardAction
-/subArticle.do=board.controller.SubArticleAction
 /article.do=board.controller.GetArticleAction
+/subArticle.do=board.controller.SubArticleAction
+/subReply.do=board.controller.SubReplyAction
 /articleWrite.do=board.controller.WriteArticleAction
