--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -4,7 +4,7 @@
 #user
 /join.do=user.controller.JoinAction
 /joinEnd.do=user.controller.UserCreateAction
-/login.do=user.controller.LoginAction
+/login.do=user.controller.LoginCheckAction
 /logout.do=user.controller.LogoutAction
 
 #borad
