--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -3,11 +3,13 @@
 
 #user
 /join.do=user.controller.JoinAction
-/joinEnd.do=user.controller.UserCreateAction
 /login.do=user.controller.LoginCheckAction
 /logout.do=user.controller.LogoutAction
+/topUserAdjust.do=user.controller.TopUserAdjustAction
+/userAdjust.do=user.controller.UserAdjustAction
+/joinEnd.do=user.controller.UserCreateAction
 
-#borad
+#board
 /board.do=board.controller.BoardAction
 /article.do=board.controller.GetArticleAction
 /subArticle.do=board.controller.SubArticleAction
