--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -11,6 +11,8 @@
 
 #board
 /board.do=board.controller.BoardAction
+/delBookmark.do=board.controller.DelBookmarkAction
+/bookmark.do=board.controller.SetBookmarkAction
 /article.do=board.controller.GetArticleAction
 /subArticle.do=board.controller.SubArticleAction
 /subReply.do=board.controller.SubReplyAction
