--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -11,6 +11,7 @@
 
 #board
 /board.do=board.controller.BoardAction
+/delArticle.do=board.controller.DelArticleAction
 /delBookmark.do=board.controller.DelBookmarkAction
 /bookmark.do=board.controller.SetBookmarkAction
 /article.do=board.controller.GetArticleAction
