--- a/SpringMVC/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMVC/src/main/webapp/WEB-INF/web.xml
@@ -3,16 +3,21 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<!-- The definition of the Root Spring Container shared by all Servlets 
+		and Filters -->
+	<!-- app을 읽기전에 우선처리해야할 사항(공통설정)을 체크하는 태그 ex) DataSource, Transaction, Security, 
+		AOP 등등... -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
 	</context-param>
-	
-	<!-- Creates the Spring Container shared by all Servlets and Filters -->
+
+	<!-- Creates the Spring Container shared by all Servlets and Filters context-param에 
+		지정한 위치를 참조를해서 로드한다. -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<!-- ================================================================================ -->
 
 	<!-- Processes application requests -->
 	<servlet>
@@ -21,13 +26,35 @@
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<!-- servlet-context.xml에는 MVC와 관련된 설정 정보 -->
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-		
+
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
+	<!-- POST방식일 때 한글 인코딩 처리 필터 등록 -->
+	<filter>
+		<description></description>
+		<display-name>SpringEncodeFilter</display-name>
+		<filter-name>SpringEncodeFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>SpringEncodeFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<!-- ===================================== -->
 
 </web-app>
