--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -15,6 +15,7 @@
 /delBookmark.do=board.controller.DelBookmarkAction
 /bookmark.do=board.controller.SetBookmarkAction
 /article.do=board.controller.GetArticleAction
+/keywordSearch.do=board.controller.KeySearchAction
 /subArticle.do=board.controller.SubArticleAction
 /subReply.do=board.controller.SubReplyAction
 /articleWrite.do=board.controller.WriteArticleAction
