--- a/SpringMVC/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMVC/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,8 @@
 		AOP 등등... -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>/WEB-INF/spring/root-context.xml		
+		</param-value>
 	</context-param>
 
 	<!-- Creates the Spring Container shared by all Servlets and Filters context-param에 
