--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -13,6 +13,8 @@
 /board.do=board.controller.BoardAction
 /delArticle.do=board.controller.DelArticleAction
 /delBookmark.do=board.controller.DelBookmarkAction
+/editArticle.do=board.controller.EditArticleAction
+/editEndArticle.do=board.controller.EditEndArticleAction
 /bookmark.do=board.controller.SetBookmarkAction
 /article.do=board.controller.GetArticleAction
 /keywordSearch.do=board.controller.KeySearchAction
