--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -17,7 +17,9 @@
 /editEndArticle.do=board.controller.EditEndArticleAction
 /bookmark.do=board.controller.SetBookmarkAction
 /article.do=board.controller.GetArticleAction
+/likes.do=board.controller.IncreaseLikesAction
 /keywordSearch.do=board.controller.KeySearchAction
 /subArticle.do=board.controller.SubArticleAction
 /subReply.do=board.controller.SubReplyAction
 /articleWrite.do=board.controller.WriteArticleAction
+/WriteNotice.do=board.controller.WriteNoticeAction
