--- a/Commuer/WebContent/WEB-INF/Command.properties
+++ b/Commuer/WebContent/WEB-INF/Command.properties
@@ -2,6 +2,7 @@
 /main.do=common.controller.MainAction
 
 #user
+/findUser.do=user.controller.FindUserAction
 /join.do=user.controller.JoinAction
 /login.do=user.controller.LoginCheckAction
 /logout.do=user.controller.LogoutAction
@@ -23,3 +24,5 @@
 /subReply.do=board.controller.SubReplyAction
 /articleWrite.do=board.controller.WriteArticleAction
 /WriteNotice.do=board.controller.WriteNoticeAction
+
+#frontTable
